Fixed issue with unmodifiable list